PR-5 :: Правки в моделях, правки прав доступа