@@ -4,7 +4,9 @@ import org.springframework.stereotype.Component;
 import ru.solomka.study.schedule.api.model.lesson.Lesson;
 import ru.solomka.study.schedule.api.model.ScheduleInfo;
 import ru.solomka.study.schedule.api.model.ScheduleItem;
+import ru.solomka.study.schedule.exception.BadRequestClientException;
 
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -13,9 +15,8 @@ import java.util.stream.Collectors;
 public class ScheduleHelper {
 
     public List<ScheduleInfo> buildScheduleInfo(List<Lesson> lessons) {
-        if (lessons == null || lessons.isEmpty()) {
-            return List.of();
-        }
+        if (lessons == null || lessons.isEmpty())
+            return Collections.emptyList();
 
         return lessons.stream()
                 .collect(Collectors.groupingBy(Lesson::dayOfWeek))
@@ -31,30 +32,36 @@ public class ScheduleHelper {
     }
 
     public List<Lesson> buildLessonByScheduleInfo(String groupId, List<ScheduleInfo> scheduleInfo) {
-        return scheduleInfo.stream().flatMap(info -> info.dayScheduleDetail().stream().map(detail ->
-                new Lesson(
-                        detail.lessonName(),
-                        detail.lessonType(),
-                        detail.teacherId(),
-                        detail.roomId(),
-                        groupId,
-                        info.dayOfWeek(),
-                        false,
-                        null, // todo: обогащение временными метками
-                        detail.startTime(),
-                        detail.endTime()
-                )
-        )).toList();
-    }
+        return scheduleInfo.stream().flatMap(info -> info.dayScheduleDetail().stream().map(detail -> {
+            if(info.dayOfWeek() > 7)
+                throw new BadRequestClientException("The day of the week is greater than 7");
 
-    private ScheduleItem mapLessonToScheduleItem(Lesson lesson) {
-        return new ScheduleItem(
-                lesson.name(),
-                lesson.type(),
-                lesson.roomId(),
-                lesson.teacherId(),
-                lesson.startTime(),
-                lesson.endTime()
-        );
-    }
+            return new Lesson(
+                    detail.id(),
+                    detail.lessonName(),
+                    detail.lessonType(),
+                    detail.teacherId(),
+                    detail.roomId(),
+                    groupId,
+                    info.dayOfWeek(),
+                    false,
+                    null,
+                    detail.startTime(),
+                    detail.endTime()
+            );
+        })).toList();
+}
+
+private ScheduleItem mapLessonToScheduleItem(Lesson lesson) {
+    return new ScheduleItem(
+            lesson.id(),
+            lesson.name(),
+            lesson.type(),
+            lesson.roomId(),
+            lesson.teacherId(),
+            lesson.tag(),
+            lesson.startTime(),
+            lesson.endTime()
+    );
+}
 }
